--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-    <ion-tab [root]="tab1" tabTitle="Connection" tabIcon="film"></ion-tab>
-    <ion-tab [root]="tab2" tabTitle="PlayMode" tabIcon="people"></ion-tab>
-    <ion-tab [root]="tab3" tabTitle="Procedures" tabIcon="planet"></ion-tab>
+    <ion-tab [root]="connectionTab" tabTitle="Connection"></ion-tab>
+    <ion-tab [root]="programTab" tabTitle="Program"></ion-tab>
+    <ion-tab [root]="playTab" tabTitle="Connection" ></ion-tab>
 </ion-tabs>
