--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs>
     <ion-tab [root]="connectionTab" tabTitle="Connection"></ion-tab>
-    <ion-tab [root]="programTab" tabTitle="Program"></ion-tab>
-    <ion-tab [root]="playTab" tabTitle="Connection" ></ion-tab>
+    <ion-tab [enable]="connection.currentDevice.connected"  [root]="playTab" tabTitle="Play" ></ion-tab>
+    <ion-tab [enable]="connection.currentDevice.connected" [root]="programTab" tabTitle="Program"></ion-tab>
 </ion-tabs>
